# flatbuffers/python/quantra/PriceCallableFixedRateBondRequest.py
@@ -1,0 +1,156 @@
+# automatically generated by the FlatBuffers compiler, do not modify
+
+# namespace: quantra
+
+import flatbuffers
+from flatbuffers.compat import import_numpy
+np = import_numpy()
+
+# Request to price one or more callable fixed-rate bonds.
+class PriceCallableFixedRateBondRequest(object):
+    __slots__ = ['_tab']
+
+    @classmethod
+    def GetRootAs(cls, buf, offset=0):
+        n = flatbuffers.encode.Get(flatbuffers.packer.uoffset, buf, offset)
+        x = PriceCallableFixedRateBondRequest()
+        x.Init(buf, n + offset)
+        return x
+
+    @classmethod
+    def GetRootAsPriceCallableFixedRateBondRequest(cls, buf, offset=0):
+        """This method is deprecated. Please switch to GetRootAs."""
+        return cls.GetRootAs(buf, offset)
+    # PriceCallableFixedRateBondRequest
+    def Init(self, buf, pos):
+        self._tab = flatbuffers.table.Table(buf, pos)
+
+    # PriceCallableFixedRateBondRequest
+    def Pricing(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(4))
+        if o != 0:
+            x = self._tab.Indirect(o + self._tab.Pos)
+            from quantra.Pricing import Pricing
+            obj = Pricing()
+            obj.Init(self._tab.Bytes, x)
+            return obj
+        return None
+
+    # PriceCallableFixedRateBondRequest
+    def Bonds(self, j):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        if o != 0:
+            x = self._tab.Vector(o)
+            x += flatbuffers.number_types.UOffsetTFlags.py_type(j) * 4
+            x = self._tab.Indirect(x)
+            from quantra.PriceCallableFixedRateBond import PriceCallableFixedRateBond
+            obj = PriceCallableFixedRateBond()
+            obj.Init(self._tab.Bytes, x)
+            return obj
+        return None
+
+    # PriceCallableFixedRateBondRequest
+    def BondsLength(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        if o != 0:
+            return self._tab.VectorLen(o)
+        return 0
+
+    # PriceCallableFixedRateBondRequest
+    def BondsIsNone(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        return o == 0
+
+def PriceCallableFixedRateBondRequestStart(builder):
+    builder.StartObject(2)
+
+def Start(builder):
+    PriceCallableFixedRateBondRequestStart(builder)
+
+def PriceCallableFixedRateBondRequestAddPricing(builder, pricing):
+    builder.PrependUOffsetTRelativeSlot(0, flatbuffers.number_types.UOffsetTFlags.py_type(pricing), 0)
+
+def AddPricing(builder, pricing):
+    PriceCallableFixedRateBondRequestAddPricing(builder, pricing)
+
+def PriceCallableFixedRateBondRequestAddBonds(builder, bonds):
+    builder.PrependUOffsetTRelativeSlot(1, flatbuffers.number_types.UOffsetTFlags.py_type(bonds), 0)
+
+def AddBonds(builder, bonds):
+    PriceCallableFixedRateBondRequestAddBonds(builder, bonds)
+
+def PriceCallableFixedRateBondRequestStartBondsVector(builder, numElems):
+    return builder.StartVector(4, numElems, 4)
+
+def StartBondsVector(builder, numElems):
+    return PriceCallableFixedRateBondRequestStartBondsVector(builder, numElems)
+
+def PriceCallableFixedRateBondRequestEnd(builder):
+    return builder.EndObject()
+
+def End(builder):
+    return PriceCallableFixedRateBondRequestEnd(builder)
+
+try:
+    from typing import List, Optional
+except:
+    pass
+
+class PriceCallableFixedRateBondRequestT(object):
+
+    # PriceCallableFixedRateBondRequestT
+    def __init__(self):
+        self.pricing = None  # type: Optional[PricingT]
+        self.bonds = None  # type: List[PriceCallableFixedRateBondT]
+
+    @classmethod
+    def InitFromBuf(cls, buf, pos):
+        priceCallableFixedRateBondRequest = PriceCallableFixedRateBondRequest()
+        priceCallableFixedRateBondRequest.Init(buf, pos)
+        return cls.InitFromObj(priceCallableFixedRateBondRequest)
+
+    @classmethod
+    def InitFromPackedBuf(cls, buf, pos=0):
+        n = flatbuffers.encode.Get(flatbuffers.packer.uoffset, buf, pos)
+        return cls.InitFromBuf(buf, pos+n)
+
+    @classmethod
+    def InitFromObj(cls, priceCallableFixedRateBondRequest):
+        x = PriceCallableFixedRateBondRequestT()
+        x._UnPack(priceCallableFixedRateBondRequest)
+        return x
+
+    # PriceCallableFixedRateBondRequestT
+    def _UnPack(self, priceCallableFixedRateBondRequest):
+        if priceCallableFixedRateBondRequest is None:
+            return
+        if priceCallableFixedRateBondRequest.Pricing() is not None:
+            self.pricing = PricingT.InitFromObj(priceCallableFixedRateBondRequest.Pricing())
+        if not priceCallableFixedRateBondRequest.BondsIsNone():
+            self.bonds = []
+            for i in range(priceCallableFixedRateBondRequest.BondsLength()):
+                if priceCallableFixedRateBondRequest.Bonds(i) is None:
+                    self.bonds.append(None)
+                else:
+                    priceCallableFixedRateBond_ = PriceCallableFixedRateBondT.InitFromObj(priceCallableFixedRateBondRequest.Bonds(i))
+                    self.bonds.append(priceCallableFixedRateBond_)
+
+    # PriceCallableFixedRateBondRequestT
+    def Pack(self, builder):
+        if self.pricing is not None:
+            pricing = self.pricing.Pack(builder)
+        if self.bonds is not None:
+            bondslist = []
+            for i in range(len(self.bonds)):
+                bondslist.append(self.bonds[i].Pack(builder))
+            PriceCallableFixedRateBondRequestStartBondsVector(builder, len(self.bonds))
+            for i in reversed(range(len(self.bonds))):
+                builder.PrependUOffsetTRelative(bondslist[i])
+            bonds = builder.EndVector()
+        PriceCallableFixedRateBondRequestStart(builder)
+        if self.pricing is not None:
+            PriceCallableFixedRateBondRequestAddPricing(builder, pricing)
+        if self.bonds is not None:
+            PriceCallableFixedRateBondRequestAddBonds(builder, bonds)
+        priceCallableFixedRateBondRequest = PriceCallableFixedRateBondRequestEnd(builder)
+        return priceCallableFixedRateBondRequest
